update  a trip
